--- a/public/contacto.html
+++ b/public/contacto.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <h1>Informações de Contacto</h1>
-  <p><strong>Nome legal:</strong> Vasco Martins</p>
+  <p><strong>Nome legal:</strong> Vasco José de Matos Martins</p>
   <p><strong>Email:</strong> <a href="mailto:valkopt@gmail.com">valkopt@gmail.com</a></p>
   <p><strong>Entidade responsável:</strong> Programador individual</p>
   <p>Esta página serve para cumprir os requisitos de transparência exigidos pela Google Play para apps de notícias.</p>
